# burstlag

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
cpplib/: fastexp.hpp
src/burstlag/: __init__.py  __init__.pyx  cppdefs.pxd  interface.pxd  interface.pyx
src/burstlag/cpp/: core.hpp
src/burstlag/cpp/caching/: factorials.hpp  outputs.cpp  outputs.hpp
src/burstlag/cpp/fast_sum/: converging.cpp  converging.hpp  lazy.cpp  lazy.hpp  sum_terms.cpp  sum_terms.hpp
src/burstlag/cpp/inputs/: relation.cpp  relation.hpp
src/burstlag/cpp/lazy_arrays/: base.hpp  rows.hpp  sub.hpp
src/burstlag/cpp/util/: pair_ops.hpp  quadratic.cpp  quadratic.hpp
src/burstlag/findpeak/: __init__.py  fillmesh.py  polyfit.py
src/cpp/caching/: factorials.cpp
src/cpp/fast_sum/: converging.cpp  lazy.cpp  lazy.hpp
src/cpp/inputs/: relation.cpp  relation.hpp
test/: failstates.py  known_values.py
test/timing/: simple.py
