[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0",
    "cython >= 3.0.10",
    "numpy >= 2.0.0"
]

[project]

name = "burst-lag"
version = "0.0"

requires-python = ">= 3.9.7"

dependencies = [
    "cython >= 3.0.10",
    "numpy >= 2.0.0",
    "scipy >= 1.13.1",
    "matplotlib >= 3.9.0",
]